feat(cart): add shopping cart icons and add-to-cart functionality to pricing cards

--- a/index.html
+++ b/index.html
@@ -268,12 +268,15 @@
                                     class="product-card p-3 p-md-4 bg-dark text-light shadow-lg rounded d-flex align-items-center">
                                     <img src="assets/img/product img/espresso.png" alt="Espresso"
                                         class="img-fluid rounded product-thumb">
-                                    <div>
+                                    <div class="flex-grow-1">
                                         <h3>Espresso</h3>
                                         <p class="fs-4 fw-bold">$2.50
                                         </p>
                                         <p>Kopi hitam pekat dengan
                                             cita rasa yang kuat dan aroma yang menggoda.</p>
+                                        <button class="btn btn-sm btn-outline-warning add-to-cart-btn mt-2" data-product="Espresso" data-price="2.50">
+                                            <i class="fas fa-shopping-cart me-1"></i>Add Cart
+                                        </button>
                                     </div>
                                 </div>
                             </div>
@@ -288,6 +291,9 @@
                                         </p>
                                         <p>Perpaduan sempurna antara
                                             espresso, susu panas, dan busa susu lembut.</p>
+                                        <button class="btn btn-sm btn-outline-warning add-to-cart-btn mt-2" data-product="Cappuccino" data-price="3.50">
+                                            <i class="fas fa-shopping-cart me-1"></i>Add Cart
+                                        </button>
                                     </div>
                                 </div>
                             </div>
@@ -302,6 +308,9 @@
                                         </p>
                                         <p>Minuman kopi creamy dengan
                                             lebih banyak susu dan sedikit busa di atasnya.</p>
+                                        <button class="btn btn-sm btn-outline-warning add-to-cart-btn mt-2" data-product="Latte" data-price="4.00">
+                                            <i class="fas fa-shopping-cart me-1"></i>Add Cart
+                                        </button>
                                     </div>
                                 </div>
                             </div>
@@ -318,6 +327,9 @@
                                             dengan menambahkan air panas untuk rasa yang lebih
                                             ringan.
                                         </p>
+                                        <button class="btn btn-sm btn-outline-warning add-to-cart-btn mt-2" data-product="Americano" data-price="3.00">
+                                            <i class="fas fa-shopping-cart me-1"></i>Add Cart
+                                        </button>
                                     </div>
                                 </div>
                             </div>
@@ -334,6 +346,9 @@
                                             dengan menambahkan air panas untuk rasa yang lebih
                                             ringan.
                                         </p>
+                                        <button class="btn btn-sm btn-outline-warning add-to-cart-btn mt-2" data-product="Creme Latte" data-price="3.00">
+                                            <i class="fas fa-shopping-cart me-1"></i>Add Cart
+                                        </button>
                                     </div>
                                 </div>
                             </div>
@@ -349,6 +364,10 @@
                                         <p>Kopi hitam yang diseduh
                                             dengan menambahkan air panas untuk rasa yang lebih
                                             ringan.
+                                        </p>
+                                        <button class="btn btn-sm btn-outline-warning add-to-cart-btn mt-2" data-product="Coffe" data-price="3.00">
+                                            <i class="fas fa-shopping-cart me-1"></i>Add Cart
+                                        </button>
                                     </div>
                                 </div>
                             </div>
@@ -392,13 +411,15 @@
                                         <td class="fw-semibold">1</td>
                                         <td>
                                             <div class="d-flex align-items-center gap-2">
-                                                <img src="assets/img/product img/espresso.png" alt="Espresso" class="order-table-img rounded">
+                                                <img src="assets/img/product img/espresso.png" alt="Espresso"
+                                                    class="order-table-img rounded">
                                                 <span>Espresso</span>
                                             </div>
                                         </td>
                                         <td class="fw-semibold">$2.50</td>
                                         <td>
-                                            <input type="number" class="form-control form-control-sm quantity-input" value="2" min="1" max="99">
+                                            <input type="number" class="form-control form-control-sm quantity-input"
+                                                value="2" min="1" max="99">
                                         </td>
                                         <td class="fw-bold text-warning">$5.00</td>
                                         <td>
@@ -411,13 +432,15 @@
                                         <td class="fw-semibold">2</td>
                                         <td>
                                             <div class="d-flex align-items-center gap-2">
-                                                <img src="assets/img/product img/cappuccino.png" alt="Cappuccino" class="order-table-img rounded">
+                                                <img src="assets/img/product img/cappuccino.png" alt="Cappuccino"
+                                                    class="order-table-img rounded">
                                                 <span>Cappuccino</span>
                                             </div>
                                         </td>
                                         <td class="fw-semibold">$3.50</td>
                                         <td>
-                                            <input type="number" class="form-control form-control-sm quantity-input" value="1" min="1" max="99">
+                                            <input type="number" class="form-control form-control-sm quantity-input"
+                                                value="1" min="1" max="99">
                                         </td>
                                         <td class="fw-bold text-warning">$3.50</td>
                                         <td>
@@ -430,13 +453,15 @@
                                         <td class="fw-semibold">3</td>
                                         <td>
                                             <div class="d-flex align-items-center gap-2">
-                                                <img src="assets/img/product img/latte.png" alt="Latte" class="order-table-img rounded">
+                                                <img src="assets/img/product img/latte.png" alt="Latte"
+                                                    class="order-table-img rounded">
                                                 <span>Latte</span>
                                             </div>
                                         </td>
                                         <td class="fw-semibold">$4.00</td>
                                         <td>
-                                            <input type="number" class="form-control form-control-sm quantity-input" value="3" min="1" max="99">
+                                            <input type="number" class="form-control form-control-sm quantity-input"
+                                                value="3" min="1" max="99">
                                         </td>
                                         <td class="fw-bold text-warning">$12.00</td>
                                         <td>
