fix(cart): fully integrate cart functionality with accurate total calculation and delete operations

--- a/index.html
+++ b/index.html
@@ -274,7 +274,8 @@
                                         </p>
                                         <p>Kopi hitam pekat dengan
                                             cita rasa yang kuat dan aroma yang menggoda.</p>
-                                        <button class="btn btn-sm btn-outline-warning add-to-cart-btn mt-2" data-product="Espresso" data-price="2.50">
+                                        <button class="btn btn-sm btn-outline-warning add-to-cart-btn mt-2"
+                                            data-product="Espresso" data-price="2.50">
                                             <i class="fas fa-shopping-cart me-1"></i>Add Cart
                                         </button>
                                     </div>
@@ -291,7 +292,8 @@
                                         </p>
                                         <p>Perpaduan sempurna antara
                                             espresso, susu panas, dan busa susu lembut.</p>
-                                        <button class="btn btn-sm btn-outline-warning add-to-cart-btn mt-2" data-product="Cappuccino" data-price="3.50">
+                                        <button class="btn btn-sm btn-outline-warning add-to-cart-btn mt-2"
+                                            data-product="Cappuccino" data-price="3.50">
                                             <i class="fas fa-shopping-cart me-1"></i>Add Cart
                                         </button>
                                     </div>
@@ -308,7 +310,8 @@
                                         </p>
                                         <p>Minuman kopi creamy dengan
                                             lebih banyak susu dan sedikit busa di atasnya.</p>
-                                        <button class="btn btn-sm btn-outline-warning add-to-cart-btn mt-2" data-product="Latte" data-price="4.00">
+                                        <button class="btn btn-sm btn-outline-warning add-to-cart-btn mt-2"
+                                            data-product="Latte" data-price="4.00">
                                             <i class="fas fa-shopping-cart me-1"></i>Add Cart
                                         </button>
                                     </div>
@@ -327,7 +330,8 @@
                                             dengan menambahkan air panas untuk rasa yang lebih
                                             ringan.
                                         </p>
-                                        <button class="btn btn-sm btn-outline-warning add-to-cart-btn mt-2" data-product="Americano" data-price="3.00">
+                                        <button class="btn btn-sm btn-outline-warning add-to-cart-btn mt-2"
+                                            data-product="Americano" data-price="3.00">
                                             <i class="fas fa-shopping-cart me-1"></i>Add Cart
                                         </button>
                                     </div>
@@ -346,7 +350,8 @@
                                             dengan menambahkan air panas untuk rasa yang lebih
                                             ringan.
                                         </p>
-                                        <button class="btn btn-sm btn-outline-warning add-to-cart-btn mt-2" data-product="Creme Latte" data-price="3.00">
+                                        <button class="btn btn-sm btn-outline-warning add-to-cart-btn mt-2"
+                                            data-product="Creme Latte" data-price="3.00">
                                             <i class="fas fa-shopping-cart me-1"></i>Add Cart
                                         </button>
                                     </div>
@@ -365,7 +370,8 @@
                                             dengan menambahkan air panas untuk rasa yang lebih
                                             ringan.
                                         </p>
-                                        <button class="btn btn-sm btn-outline-warning add-to-cart-btn mt-2" data-product="Coffe" data-price="3.00">
+                                        <button class="btn btn-sm btn-outline-warning add-to-cart-btn mt-2"
+                                            data-product="Coffe" data-price="3.00">
                                             <i class="fas fa-shopping-cart me-1"></i>Add Cart
                                         </button>
                                     </div>
@@ -423,7 +429,7 @@
                                         </td>
                                         <td class="fw-bold text-warning">$5.00</td>
                                         <td>
-                                            <button class="btn btn-sm btn-outline-danger" title="Hapus">
+                                            <button class="btn btn-sm btn-outline-danger delete-btn" title="Hapus">
                                                 <i class="fas fa-trash"></i>
                                             </button>
                                         </td>
@@ -444,7 +450,7 @@
                                         </td>
                                         <td class="fw-bold text-warning">$3.50</td>
                                         <td>
-                                            <button class="btn btn-sm btn-outline-danger" title="Hapus">
+                                            <button class="btn btn-sm btn-outline-danger delete-btn" title="Hapus">
                                                 <i class="fas fa-trash"></i>
                                             </button>
                                         </td>
@@ -465,7 +471,7 @@
                                         </td>
                                         <td class="fw-bold text-warning">$12.00</td>
                                         <td>
-                                            <button class="btn btn-sm btn-outline-danger" title="Hapus">
+                                            <button class="btn btn-sm btn-outline-danger delete-btn" title="Hapus">
                                                 <i class="fas fa-trash"></i>
                                             </button>
                                         </td>
@@ -481,12 +487,12 @@
 
                         <div class="row g-2 mt-4 mb-5">
                             <div class="col-12 col-md-6">
-                                <button type="button" class="btn btn-outline-warning w-100 fw-bold py-2">
+                                <button type="button" class="btn btn-outline-warning w-100 fw-bold py-2" id="clearCartBtn">
                                     <i class="fas fa-plus me-2"></i>Tambah Pesanan
                                 </button>
                             </div>
                             <div class="col-12 col-md-6">
-                                <button type="button" class="btn btn-warning w-100 fw-bold py-2">
+                                <button type="button" class="btn btn-warning w-100 fw-bold py-2" id="checkoutBtn">
                                     <i class="fas fa-shopping-cart me-2"></i>Checkout
                                 </button>
                             </div>
