--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
                                     </tr>
                                     <tr class="border-top border-warning">
                                         <td colspan="4" class="text-end fw-bold fs-5">TOTAL PESANAN:</td>
-                                        <td class="fw-bold fs-5 text-warning">$20.50</td>
+                                        <td class="fw-bold fs-5 text-warning" id="totalPesanan">$20.50</td>
                                         <td></td>
                                     </tr>
                                 </tbody>
@@ -487,7 +487,8 @@
 
                         <div class="row g-2 mt-4 mb-5">
                             <div class="col-12 col-md-6">
-                                <button type="button" class="btn btn-outline-warning w-100 fw-bold py-2" id="clearCartBtn">
+                                <button type="button" class="btn btn-outline-warning w-100 fw-bold py-2"
+                                    id="clearCartBtn">
                                     <i class="fas fa-plus me-2"></i>Tambah Pesanan
                                 </button>
                             </div>
