Perubahan JS, Html dan Style Css

--- a/index.html
+++ b/index.html
@@ -54,29 +54,29 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse justify-content-center mt-3" id="navbarNav">
-                    <ul class="navbar-nav fs-5 fw-semibold gap-2 gap-lg-3">
+                    <ul class="navbar-nav fs-5 fw-semibold gap-2 gap-lg-3 ">
                         <li class="nav-item">
-                            <a class="nav-link btn btn-dark px-3 px-lg-4 active" aria-current="page" href="#"><i
-                                    class="fas fa-home me-2"></i>Home</a>
+                            <a class="nav-link btn btn-dark px-3 px-lg-4 active text-dark" aria-current="page"
+                                href="#"><i class="fas fa-home me-2"></i>Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link btn btn-dark px-3 px-lg-4" href="#about"><i
+                            <a class="nav-link btn btn-dark px-3 px-lg-4 text-dark" href="#about"><i
                                     class="fas fa-info-circle me-2"></i>About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link btn btn-dark px-3 px-lg-4" href="#features"><i
+                            <a class="nav-link btn btn-dark px-3 px-lg-4 text-dark" href="#features"><i
                                     class="fas fa-star me-2"></i>Features</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link btn btn-dark px-3 px-lg-4" href="#gallery"><i
+                            <a class="nav-link btn btn-dark px-3 px-lg-4 text-dark " href="#gallery"><i
                                     class="fas fa-images me-2"></i>Gallery</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link btn btn-dark px-3 px-lg-4" href="#pricing"><i
+                            <a class="nav-link btn btn-dark px-3 px-lg-4 text-dark" href="#pricing"><i
                                     class="fas fa-tags me-2"></i>Pricing</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link btn btn-dark px-3 px-lg-4" href="#contact"><i
+                            <a class="nav-link btn btn-dark px-3 px-lg-4 text-dark  " href="#contact"><i
                                     class="fas fa-envelope me-2"></i>Contact</a>
                         </li>
                     </ul>
@@ -532,6 +532,7 @@
 
     <!-- Sticky Navbar JS -->
     <script src="assets/js/javascrip.js"></script>
+    <script src="assets/js/script.js"></script>
     <!-- Login / Register Modals -->
     <div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="loginModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
