fix(images): correct malformed gallery image filename (latte.png) to prevent 404

--- a/index.html
+++ b/index.html
@@ -213,32 +213,32 @@
                             </div>
                             <div class="col-12 col-md-4">
                                 <div class="product-card shadow-lg rounded overflow-hidden">
-                                    <img src="assets/img/product img/Latte.png" alt="Gallery Image 2"
+                                    <img src="assets/img/product img/cappuccino.png" alt="Gallery Image 2"
                                         class="img-fluid gallery-img">
                                 </div>
                             </div>
                             <div class="col-12 col-md-4">
                                 <div class="product-card shadow-lg rounded overflow-hidden">
-                                    <img src="assets/img/product img/Cappuccino.png" alt="Gallery Image 3"
+                                    <img src="assets/img/product img/coffe.png" alt="Gallery Image 3"
                                         class="img-fluid gallery-img">
                                 </div>
                             </div>
                             <div class="col-12 col-md-4">
                                 <div class="product-card shadow-lg rounded overflow-hidden">
-                                    <img src="assets/img/product img/Espresso.png" alt="Gallery Image 1"
+                                    <img src="assets/img/product img/creme latte.png" alt="Gallery Image 1"
                                         class="img-fluid gallery-img">
                                 </div>
                             </div>
 
                             <div class="col-12 col-md-4">
                                 <div class="product-card shadow-lg rounded overflow-hidden">
-                                    <img src="assets/img/product img/creme latte.png" alt="Gallery Image 3    "
+                                    <img src="assets/img/product img/espresso.png" alt="Gallery Image 3    "
                                         class="img-fluid gallery-img">
                                 </div>
                             </div>
                             <div class="col-12 col-md-4">
                                 <div class="product-card shadow-lg rounded overflow-hidden">
-                                    <img src="assets/img/product img/coffe.png" alt="Gallery Image 1"
+                                    <img src="assets/img/product img/latte.png" alt="Gallery Image 1"
                                         class="img-fluid gallery-img">
                                 </div>
                             </div>
