fix(images): add onerror fallback to gallery and pricing images to avoid broken images

--- a/index.html
+++ b/index.html
@@ -208,38 +208,38 @@
                             <div class="col-12 col-md-4">
                                 <div class="product-card shadow-lg rounded overflow-hidden">
                                     <img src="assets/img/product img/Americano.png" alt="Gallery Image 1"
-                                        class="img-fluid gallery-img">
+                                        class="img-fluid gallery-img" onerror="this.onerror=null;this.src='assets/img/product img/espresso.png'">
                                 </div>
                             </div>
                             <div class="col-12 col-md-4">
                                 <div class="product-card shadow-lg rounded overflow-hidden">
                                     <img src="assets/img/product img/cappuccino.png" alt="Gallery Image 2"
-                                        class="img-fluid gallery-img">
+                                        class="img-fluid gallery-img" onerror="this.onerror=null;this.src='assets/img/product img/espresso.png'">
                                 </div>
                             </div>
                             <div class="col-12 col-md-4">
                                 <div class="product-card shadow-lg rounded overflow-hidden">
                                     <img src="assets/img/product img/coffe.png" alt="Gallery Image 3"
-                                        class="img-fluid gallery-img">
+                                        class="img-fluid gallery-img" onerror="this.onerror=null;this.src='assets/img/product img/espresso.png'">
                                 </div>
                             </div>
                             <div class="col-12 col-md-4">
                                 <div class="product-card shadow-lg rounded overflow-hidden">
                                     <img src="assets/img/product img/creme latte.png" alt="Gallery Image 1"
-                                        class="img-fluid gallery-img">
+                                        class="img-fluid gallery-img" onerror="this.onerror=null;this.src='assets/img/product img/espresso.png'">
                                 </div>
                             </div>
 
                             <div class="col-12 col-md-4">
                                 <div class="product-card shadow-lg rounded overflow-hidden">
                                     <img src="assets/img/product img/espresso.png" alt="Gallery Image 3    "
-                                        class="img-fluid gallery-img">
+                                        class="img-fluid gallery-img" onerror="this.onerror=null;this.src='assets/img/product img/espresso.png'">
                                 </div>
                             </div>
                             <div class="col-12 col-md-4">
                                 <div class="product-card shadow-lg rounded overflow-hidden">
                                     <img src="assets/img/product img/latte.png" alt="Gallery Image 1"
-                                        class="img-fluid gallery-img">
+                                        class="img-fluid gallery-img" onerror="this.onerror=null;this.src='assets/img/product img/espresso.png'">
                                 </div>
                             </div>
                         </div>
