fix(images): normalize image folder and filenames; update HTML/JS references to product-img

--- a/index.html
+++ b/index.html
@@ -207,39 +207,39 @@
                         <div class="row g-2 g-md-4 mb-3 mb-md-5 px-3 px-md-0">
                             <div class="col-12 col-md-4">
                                 <div class="product-card shadow-lg rounded overflow-hidden">
-                                    <img src="assets/img/product img/Americano.png" alt="Gallery Image 1"
-                                        class="img-fluid gallery-img" onerror="this.onerror=null;this.src='assets/img/product img/espresso.png'">
+                                    <img src="assets/img/product-img/americano.png" alt="Gallery Image 1"
+                                        class="img-fluid gallery-img" onerror="this.onerror=null;this.src='assets/img/product-img/espresso.png'">
                                 </div>
                             </div>
                             <div class="col-12 col-md-4">
                                 <div class="product-card shadow-lg rounded overflow-hidden">
-                                    <img src="assets/img/product img/cappuccino.png" alt="Gallery Image 2"
-                                        class="img-fluid gallery-img" onerror="this.onerror=null;this.src='assets/img/product img/espresso.png'">
+                                    <img src="assets/img/product-img/cappuccino.png" alt="Gallery Image 2"
+                                        class="img-fluid gallery-img" onerror="this.onerror=null;this.src='assets/img/product-img/espresso.png'">
                                 </div>
                             </div>
                             <div class="col-12 col-md-4">
                                 <div class="product-card shadow-lg rounded overflow-hidden">
-                                    <img src="assets/img/product img/coffe.png" alt="Gallery Image 3"
-                                        class="img-fluid gallery-img" onerror="this.onerror=null;this.src='assets/img/product img/espresso.png'">
+                                    <img src="assets/img/product-img/coffe.png" alt="Gallery Image 3"
+                                        class="img-fluid gallery-img" onerror="this.onerror=null;this.src='assets/img/product-img/espresso.png'">
                                 </div>
                             </div>
                             <div class="col-12 col-md-4">
                                 <div class="product-card shadow-lg rounded overflow-hidden">
-                                    <img src="assets/img/product img/creme latte.png" alt="Gallery Image 1"
-                                        class="img-fluid gallery-img" onerror="this.onerror=null;this.src='assets/img/product img/espresso.png'">
+                                    <img src="assets/img/product-img/creme-latte.png" alt="Gallery Image 1"
+                                        class="img-fluid gallery-img" onerror="this.onerror=null;this.src='assets/img/product-img/espresso.png'">
                                 </div>
                             </div>
 
                             <div class="col-12 col-md-4">
                                 <div class="product-card shadow-lg rounded overflow-hidden">
-                                    <img src="assets/img/product img/espresso.png" alt="Gallery Image 3    "
-                                        class="img-fluid gallery-img" onerror="this.onerror=null;this.src='assets/img/product img/espresso.png'">
+                                    <img src="assets/img/product-img/espresso.png" alt="Gallery Image 3    "
+                                        class="img-fluid gallery-img" onerror="this.onerror=null;this.src='assets/img/product-img/espresso.png'">
                                 </div>
                             </div>
                             <div class="col-12 col-md-4">
                                 <div class="product-card shadow-lg rounded overflow-hidden">
-                                    <img src="assets/img/product img/latte.png" alt="Gallery Image 1"
-                                        class="img-fluid gallery-img" onerror="this.onerror=null;this.src='assets/img/product img/espresso.png'">
+                                    <img src="assets/img/product-img/latte.png" alt="Gallery Image 1"
+                                        class="img-fluid gallery-img" onerror="this.onerror=null;this.src='assets/img/product-img/espresso.png'">
                                 </div>
                             </div>
                         </div>
@@ -269,7 +269,7 @@
                             <div class="col-12 col-md-6">
                                 <div
                                     class="product-card p-3 p-md-4 bg-dark text-light shadow-lg rounded d-flex align-items-center">
-                                    <img src="assets/img/product img/espresso.png" alt="Espresso"
+                                    <img src="assets/img/product-img/espresso.png" alt="Espresso"
                                         class="img-fluid rounded product-thumb">
                                     <div class="flex-grow-1">
                                         <h3>Espresso</h3>
@@ -287,7 +287,7 @@
                             <div class="col-12 col-md-6">
                                 <div
                                     class="product-card p-3 p-md-4 bg-dark text-light shadow-lg rounded d-flex align-items-center">
-                                    <img src="assets/img/product img/cappuccino.png" alt="Cappuccino"
+                                    <img src="assets/img/product-img/cappuccino.png" alt="Cappuccino"
                                         class="img-fluid rounded product-thumb">
                                     <div>
                                         <h3>Cappuccino</h3>
@@ -305,7 +305,7 @@
                             <div class="col-12 col-md-6">
                                 <div
                                     class="product-card p-3 p-md-4 bg-dark text-light shadow-lg rounded d-flex align-items-center">
-                                    <img src="assets/img/product img/latte.png" alt="Latte"
+                                    <img src="assets/img/product-img/latte.png" alt="Latte"
                                         class="img-fluid rounded product-thumb">
                                     <div>
                                         <h3>Latte</h3>
@@ -323,7 +323,7 @@
                             <div class="col-12 col-md-6">
                                 <div
                                     class="product-card p-3 p-md-4 bg-dark text-light shadow-lg rounded d-flex align-items-center">
-                                    <img src="assets/img/product img/Americano.png" alt="Americano"
+                                    <img src="assets/img/product-img/americano.png" alt="Americano"
                                         class="img-fluid rounded product-thumb">
                                     <div>
                                         <h3>Americano</h3>
@@ -343,7 +343,7 @@
                             <div class="col-12 col-md-6">
                                 <div
                                     class="product-card p-3 p-md-4 bg-dark text-light shadow-lg rounded d-flex align-items-center">
-                                    <img src="assets/img/product img/creme latte.png" alt="Creme Latte"
+                                    <img src="assets/img/product-img/creme-latte.png" alt="Creme Latte"
                                         class="img-fluid rounded product-thumb">
                                     <div>
                                         <h3>Creme Latte</h3>
@@ -363,7 +363,7 @@
                             <div class="col-12 col-md-6">
                                 <div
                                     class="product-card p-3 p-md-4 bg-dark text-light shadow-lg rounded d-flex align-items-center">
-                                    <img src="assets/img/product img/coffe.png" alt="Coffe"
+                                    <img src="assets/img/product-img/coffe.png" alt="Coffe"
                                         class="img-fluid rounded product-thumb">
                                     <div>
                                         <h3>Coffe</h3>
